[package]
name = "fab"
version = "0.1.0"
authors = ["Shaishav Gandhi <shaishav@uber.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = {version = "0.10.4", features = ["blocking","json"] }
serde_json = "1.0.48"
serde = {version = "1.0.104", features = ["derive"] }
dirs = "2.0.2"
comfy-table = "0.1.0"
