[package]
name = "fab"
version = "0.4.2"
authors = ["Shaishav Gandhi <shaishavgandhi05@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1", git = "https://github.com/clap-rs/clap" }
clap_generate = { version = "3.0.0-beta.1", git = "https://github.com/clap-rs/clap" }
reqwest = {version = "0.10.4", features = ["blocking","json"] }
serde_json = "1.0.48"
serde = {version = "1.0.104", features = ["derive"] }
dirs = "2.0.2"
comfy-table = "0.1.0"
console="0.10.0"
confy = "0.4.0"
dialoguer = "0.5.0"
failure = "0.1.7"
futures= {version = "0.3.4", features = ["thread-pool"]}
tokio = "0.2.16"